--- a/src/components/skeleton/skeleton.scss
+++ b/src/components/skeleton/skeleton.scss
@@ -1,25 +1,23 @@
+/**
+ * @prop --skeleton-height: Skeleton height: Default: 20px for the row, 40px for the circle
+ * @prop --skeleton-width: Skeleton width: Default: 100% for the row, 40px for the circle
+ * @prop --skeleton-margin-bottom: Skeleton width: Default: 10px for the row, 5px for the circle 
+ */
+
+
 .skeleton {
 	box-sizing: border-box;
 	outline: none;
-
-	/**
-  * `overflow` and `position` are required steps to make sure
-  * the component respects the specified dimensions
-  * given via `theme` object @Input attribute
-  */
 	overflow: hidden;
 	position: relative;
 
 	background: rgb(239, 241, 246) no-repeat;
 
 	border-radius: 4px;
-	width: 100%;
-	height: 20px;
+	width: var(--skeleton-width, 100%);
+	height: var(--skeleton-height, 20px);
 	display: inline-block;
-	margin-bottom: 10px;
-
-	// More details about CSS `will-change` property
-	// in https://developer.mozilla.org/en-US/docs/Web/CSS/will-change
+	margin-bottom: var(--skeleton-margin-bottom, 10px);
 	will-change: transform;
 
 	&:after,
@@ -27,14 +25,10 @@
 		box-sizing: border-box;
 	}
 
-	/**
-  * Added only when `appearance` attribute is `circle`
-  * at component level. So that we can use it only if needed
-  */
 	&.circle {
-		width: 40px;
-		height: 40px;
-		margin: 5px;
+		width: var(--skeleton-width, 40px);
+		height: var(--skeleton-height, 40px);
+		margin: var(--skeleton-margin-bottom, 5px);
 		border-radius: 50%;
 	}
 
@@ -67,7 +61,7 @@
 		);
 	}
 
-	/**
+ /**
   * Added only when `animation` attribute is `pulse`
   * at component level. So that we can load the
   * animations only if needed
@@ -94,7 +88,6 @@
 	}
 }
 
-// CSS Animation Keyframes
 @keyframes progress {
 	0% {
 		background-position: -200px 0;
