--- a/src/components/skeleton/skeleton.scss
+++ b/src/components/skeleton/skeleton.scss
@@ -1,7 +1,9 @@
 /**
  * @prop --skeleton-height: Skeleton height: Default: 20px for the row, 40px for the circle
  * @prop --skeleton-width: Skeleton width: Default: 100% for the row, 40px for the circle
- * @prop --skeleton-margin-bottom: Skeleton width: Default: 10px for the row, 5px for the circle 
+ * @prop --skeleton-margin-bottom: Skeleton margin-bottom: Default: 10px for the row, 5px for the circle
+ * @prop --skeleton-border-radius: Skeleton border-radius: Default: 4px for the row, 50% for the circle
+ * @prop --skeleton-background: Skeleton background: Default: #eff1f6
  */
 
 
@@ -11,9 +13,9 @@
 	overflow: hidden;
 	position: relative;
 
-	background: rgb(239, 241, 246) no-repeat;
+	background:var(--skeleton-background,  #eff1f6) no-repeat;
 
-	border-radius: 4px;
+	border-radius: var(--skeleton-border-radius, 4px);
 	width: var(--skeleton-width, 100%);
 	height: var(--skeleton-height, 20px);
 	display: inline-block;
@@ -29,7 +31,7 @@
 		width: var(--skeleton-width, 40px);
 		height: var(--skeleton-height, 40px);
 		margin: var(--skeleton-margin-bottom, 5px);
-		border-radius: 50%;
+		border-radius: var(--skeleton-border-radius, 50%);
 	}
 
 	/**
