fix(circle margin): fixes css, where margin was intended to be only bottom margin

--- a/src/components/skeleton/skeleton.scss
+++ b/src/components/skeleton/skeleton.scss
@@ -30,7 +30,7 @@
 	&.circle {
 		width: var(--skeleton-width, 40px);
 		height: var(--skeleton-height, 40px);
-		margin: var(--skeleton-margin-bottom, 5px);
+		margin-bottom: var(--skeleton-margin-bottom, 5px);
 		border-radius: var(--skeleton-border-radius, 50%);
 	}
 
